--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
         </header>
 
         <div class="container">
-            <h1>Explore The World
-                with <span>TraveLand</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Aspernatur blanditiis culpa nesciunt nulla saepe!</p>
-            <button>
-                Book Now
-            </button>
+            <div class="intro__title__container">
+                <h1 class="intro__title">Explore The World
+                    with <span>TraveLand</span></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Aspernatur blanditiis culpa nesciunt nulla saepe!</p>
+                <button>
+                    Book Now
+                </button>
+            </div>
         </div>
     </section>
 
