animation and sticky header added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <section class="section__intro">
         <header class="header">
-            <div class="container">
+            <div class="container header__nav__container">
                 <nav class="header__nav">
                     <a href="#">
                         <img class="nav__logo" src="img/logo.svg" alt="">
@@ -43,23 +43,23 @@
 
         <div class="container">
             <div class="intro__title__container">
-                <h1 class="intro__title">Explore The World
+                <h1 class="intro__title animate-left">Explore The World
                     with <span>TraveLand</span></h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Aspernatur blanditiis culpa nesciunt nulla saepe!</p>
-                <button>
+                <p class="animate-left">Lorem ipsum dolor amet, consetetur sadipscing elitr sed diam nonumy
+                    eirmod tempor invidun dolore.</p>
+                <button class="intro__btn animate-left" type="button" onclick="location.href='#'">
                     Book Now
                 </button>
             </div>
         </div>
     </section>
 
-    <div>
-        <main></main>
-        <aside></aside>
-        <article></article>
-    </div>
+    <section class="section__about">
+        <div class="container">
+        </div>
+    </section>
+
     <footer></footer>
+    <script src="./js/script.js"></script>
 </body>
-<script src="./js/script.js"></script>
 </html>
