section about added

--- a/index.html
+++ b/index.html
@@ -55,7 +55,56 @@
     </section>
 
     <section class="section__about">
-        <div class="container">
+        <div class="about__image"></div>
+        <div class="section__about__container">
+            <div class="about__content">
+                <h2 class="about__title">About Us</h2>
+                <h3 class="about__subtitle">TraveLand in Numbers</h3>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                    sed dianum eirmod tempor invidunt ut labore et dolore
+                    magna aliqyam era sed diam voluptua. At vero eos et accusam
+                    etjusto duo dolres etea reb. Stet clita kasd gubergren, no
+                    sea takimata sanctus est Lorem ipsum dolor sit amet.
+                    Lorem ipsum dolor sit amet.
+                </p>
+                <button class="intro__btn animate-left" type="button" onclick="location.href='#'">
+                    Book Now
+                </button>
+                <div class="stats__container">
+                    <div>
+                        <p>534</p>
+                        <p>Trips Done</p>
+                    </div>
+                    <div>
+                        <p>424</p>
+                        <p>Corporate Clients</p>
+                    </div>
+                    <div>
+                        <p>35</p>
+                        <p>Visited Countries</p>
+                    </div>
+                    <div>
+                        <p>15</p>
+                        <p>Team Members</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="purchase">
+        <div>some content</div>
+        <div>some content</div>
+        <div>some content</div>
+        <div>some content</div>
+        <div>some content</div>
+        <div>some content</div>
+        <div>some content</div>
+        <div>some content</div>
+        <div>some content</div>
+        <div>some content</div>+
+        <div>
+            some content
         </div>
     </section>
 
