--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
     <section class="section__about">
         <div class="about__image"></div>
         <div class="section__about__container">
-            <div class="about__content">
-                <h2 class="about__title">About Us</h2>
-                <h3 class="about__subtitle">TraveLand in Numbers</h3>
+            <div class="section__about__content">
+                <h3 class="about__title">About us<br>TraveLand in <span>Numbers</span></h3>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
                     sed dianum eirmod tempor invidunt ut labore et dolore
                     magna aliqyam era sed diam voluptua. At vero eos et accusam
